apps/dev/echovote/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echovote-dev
  labels:
    kubernetes.io/metadata.name: echovote-dev
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
